# PDFAgent

./: .gitignore  .sesskey  README.md  cli.py  demo.mov  main.py  pyproject.toml  ui.py
src/: chains.py  create_retriever.py  load_llm.py  pdf_parser.py
